<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Post">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:animationCache="false"
        android:background="#6CA7C1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:background="#ffa5a5"
        android:fillViewport="false"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.964">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3d7ea6"
            android:orientation="vertical">


            <TextView
                android:id="@+id/pricetxt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:background="#ffa5a5"
                android:text="Price"
                android:textSize="25dp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/editprice"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="#fcdada"
                android:ems="10"
                android:inputType="numberSigned"
                android:maxLength="4" />


            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:background="#ffa5a5"
                android:text="Location"
                android:textSize="25dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/location_spi"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="#fcdada"
                android:entries="@array/residence_arrays"
                android:prompt="@string/residence_prompt" />

            <TextView
                android:id="@+id/types"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:background="#ffa5a5"
                android:text="Types"
                android:textSize="25dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/types_spi"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="#fcdada"
                android:entries="@array/types_arrays"
                android:prompt="@string/types_prompt" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editphone"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:inputType="numberSigned"
                app:counterEnabled="true"
                app:counterMaxLength="10">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editphonetie"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="#fcdada"
                    android:hint="Phone:"
                    android:inputType="numberSigned"
                    android:textSize="25sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editemail"
                android:layout_width="match_parent"
                android:layout_height="65dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editemailtie"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="#fcdada"
                    android:hint="Email:"
                    android:textSize="25sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editdescrip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="450">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editdescriptie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fcdada"
                    android:hint="Description:"
                    android:textSize="25sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/pickImg_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pickImg_buttton"
                android:background="#ffa5a5"/>

            <ImageView
                android:id="@+id/imageView_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:gravity="center_horizontal"
                app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scrollView3"
                app:srcCompat="@drawable/chat_icon2" />

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="#5c969e"
                android:gravity="center_horizontal"
                android:max="3000"
                android:text="Submit"
                android:textAlignment="center"
                android:textSize="40sp" />

        </LinearLayout>


    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>