...
    <string name="title_activity_maps">Map</string>
    <string name="sign_out_button_caption">Sign out</string>
    <string name="request_time_button_caption">Time of Server</string>
    <string name="time_displayer"> </string>
    <string name="calendar_button_caption">View Calendar</string>
    <string name="title_home">Home</string>
    <string name="title_post">Post</string>
    <string name="title_chat">Chat</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
...



    <string name="residence_prompt">Choose a Residence</string>

    <string-array name="residence_arrays">
        <item>Place Vanier</item>
        <item>Totem Park</item>
        <item>Orchard Commons</item>
        <item>Ritsumeikan-UBC House</item>
        <item>Walter Gage</item>
        <item>Fairview Crescent</item>
        <item>Marine Driver</item>
        <item>Fraser Hall</item>
...
        <item>Graduate Colleges</item>
    </string-array>

    <string name="types_prompt">Choose a Residence</string>

    <string-array name="types_arrays">
        <item>Shared Room</item>
        <item>Connect Single Room</item>
        <item>Single Traditional Room</item>
        <item>Six Bedroom Suite</item>
        <item>Four Bedroom Suit</item>
        <item>Three Bedroom Suit</item>
        <item>Two Bedroom Suit</item>
        <item>One Bedroom Suit</item>
...
