...

        android:icon="@drawable/ic_home"
        android:title="@string/title_home"
        android:visible="true" />

    <item
        android:id="@+id/nav_post"
        android:icon="@drawable/ic_post"
        android:title="@string/title_post"
        android:visible="true" />
    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_chat"
...
